k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-poets-society
spec:
  selector:
    app: code-poets-society
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
