k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-poets-society
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: codepoetssociety.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-poets-society
            port:
              number: 80
